--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue": "^2.0.1"
   },
   "dependencies": {
-    "cross-env": "~3.1.4"
+    "cross-env": "~3.1.4",
+    "vee-validate": "^2.0.0-beta.18"
   }
 }
