--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "laravel-mix": "^0.5.0",
     "lodash": "^4.16.2",
     "vue": "^2.0.1",
-    "vee-validate": "~2.0.0-beta.22",
+    "vee-validate": "~2.0.0-beta.22"
   },
   "dependencies": {
-    "cross-env": "~3.1.4",
+    "cross-env": "~3.1.4"
   }
 }
