add settings portion

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,5 +4,6 @@
   "/js/hrms.js": "/js/hrms.js",
   "/js/unit.js": "/js/unit.js",
   "/js/salaryInfo.js": "/js/salaryInfo.js",
+  "/js/settings.js": "/js/settings.js",
   "/js/employee.js": "/js/employee.js"
 }
