--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "laravel-mix": "^0.5.0",
     "lodash": "^4.16.2",
     "vue": "^2.0.1",
-    "vee-validate": "~2.0.0-beta.22"
+    "vee-validate": "~2.0.0-beta.22",
+    "webpack": "2.2.1"
   },
   "dependencies": {
     "cross-env": "~3.1.4"
